--- a/.github/workflows/python-ci-cd.yml
+++ b/.github/workflows/python-ci-cd.yml
@@ -26,9 +26,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Tests
-        run: python -m unittest discover  # Update if you have tests
-
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -46,6 +43,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+
+      - name: Run Snake Game (Headless Mode)
+        run: |
+          python snake.py
 
       - name: Deploy Application
         run: echo "Deployment steps go here"
