--- a/.github/workflows/python-ci-cd.yml
+++ b/.github/workflows/python-ci-cd.yml
@@ -26,27 +26,27 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
+  #deploy:
+   # needs: build
+    #runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+    #steps:
+     # - name: Checkout Code
+      #  uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
+      #- name: Set up Python
+       # uses: actions/setup-python@v4
+        #with:
+         # python-version: "3.10"
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      #- name: Install Dependencies
+        #run: |
+         # python -m pip install --upgrade pip
+         # pip install -r requirements.txt
 
-      - name: Run Snake Game (Headless Mode)
-        run: |
-          python snake.py
+      #- name: Run Snake Game (Headless Mode)
+        #run: |
+         # python snake.py
 
-      - name: Deploy Application
-        run: echo "Deployment steps go here"
+      #- name: Deploy Application
+       # run: echo "Deployment steps go here"
