--- a/.github/workflows/python-ci-cd.yml
+++ b/.github/workflows/python-ci-cd.yml
@@ -85,32 +85,32 @@ jobs:
         run: |
           python snake.py
 
-  deploy:
-    needs: build  # Ensure the build job completes successfully before deploying
-    runs-on: ubuntu-latest
+  # deploy:
+  #   needs: build  # Ensure the build job completes successfully before deploying
+  #   runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v4
+  #       with:
+  #         python-version: "3.10"
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+  #     - name: Install Dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install -r requirements.txt
 
-      - name: Build Static Files (Optional)
-        run: |
-          # If your game generates static files (e.g., HTML, JS), build them here
-          echo "Building static files..."
+  #     - name: Build Static Files (Optional)
+  #       run: |
+  #         # If your game generates static files (e.g., HTML, JS), build them here
+  #         echo "Building static files..."
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./  # Change this to the directory containing your static files
-          keep_files: true  # Keep existing files in the gh-pages branch
+  #     - name: Deploy to GitHub Pages
+  #       uses: peaceiris/actions-gh-pages@v3
+  #       with:
+  #         github_token: ${{ secrets.GITHUB_TOKEN }}
+  #         publish_dir: ./  # Change this to the directory containing your static files
+  #         keep_files: true  # Keep existing files in the gh-pages branch
