--- a/.github/workflows/python-ci-cd.yml
+++ b/.github/workflows/python-ci-cd.yml
@@ -1,30 +1,34 @@
-# name: Python CI/CD Pipeline
+name: Python CI/CD Pipeline
 
-# on:
-#   push:
-#     branches:
-#       - main  
-#   pull_request:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main  
+  pull_request:
+    branches:
+      - main
 
-# jobs:
-#   build:
-#     runs-on: ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout Code
-#         uses: actions/checkout@v3
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-#       - name: Set up Python
-#         uses: actions/setup-python@v4
-#         with:
-#           python-version: "3.10"  # Change if needed
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"  # Change if needed
 
-#       - name: Install Dependencies
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install -r requirements.txt
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run Snake Game (Headless Mode)
+        run: |
+          python snake.py
 
 #   deploy:
 #    needs: build
@@ -53,37 +57,37 @@
 
 
 
-name: Python CI/CD Pipeline
+# name: Python CI/CD Pipeline
 
-on:
-  push:
-    branches:
-      - main  # Runs when you push to the main branch
-  pull_request:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main  # Runs when you push to the main branch
+#   pull_request:
+#     branches:
+#       - main
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"  # Change if needed
+#       - name: Set up Python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: "3.10"  # Change if needed
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+#       - name: Install Dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
 
-      - name: Run Snake Game (Headless Mode)
-        run: |
-          python snake.py
+#       - name: Run Snake Game (Headless Mode)
+#         run: |
+#           python snake.py
 
   # deploy:
   #   needs: build  # Ensure the build job completes successfully before deploying
