--- a/.github/workflows/python-ci-cd.yml
+++ b/.github/workflows/python-ci-cd.yml
@@ -26,11 +26,66 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Install xvfb for headless display
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y xvfb
+
       - name: Run Snake Game (Headless Mode)
         run: |
-          python snake.py
+          # Start xvfb in the background
+          Xvfb :99 -screen 0 1280x1024x24 &
+
+          # Set the DISPLAY environment variable for headless mode
+          export DISPLAY=:99
+
+          # Run the Snake game
+          python snake.py &
+          
+          # Give it some time to run
           sleep 10
+
+          # Kill the Snake game process
           pkill -f snake.py
+
+          # Kill the Xvfb process after the test
+          pkill Xvfb
+
+
+
+# name: Python CI/CD Pipeline
+
+# on:
+#   push:
+#     branches:
+#       - main  
+#   pull_request:
+#     branches:
+#       - main
+
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout Code
+#         uses: actions/checkout@v3
+
+#       - name: Set up Python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: "3.10"  # Change if needed
+
+#       - name: Install Dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
+
+#       - name: Run Snake Game (Headless Mode)
+#         run: |
+#           python snake.py
+#           sleep 10
+#           pkill -f snake.py
 
 #   deploy:
 #    needs: build
@@ -57,7 +112,7 @@ jobs:
 #       - name: Deploy Application
 #         run: echo "Deployment steps go here"
 
-
+# ---------------------------------------------------------------------------------
 
 # name: Python CI/CD Pipeline
 
