--- a/.github/workflows/python-ci-cd.yml
+++ b/.github/workflows/python-ci-cd.yml
@@ -27,22 +27,28 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Install xvfb for headless display
+      - name: Install xvfb and sound dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y xvfb
+          sudo apt-get install -y xvfb libasound2-dev
 
       - name: Run Snake Game (Headless Mode)
         run: |
-          # Start xvfb in the background
-          Xvfb :99 -screen 0 1280x1024x24 &
+          # Start xvfb with reduced output
+          Xvfb :99 -screen 0 1280x1024x24 -ac -nolisten tcp >/dev/null 2>&1 &
           export DISPLAY=:99
           
-          # Run the Snake game with timeout
-          timeout 10s python snake.py || true
+          # Suppress ALSA warnings
+          export SDL_AUDIODRIVER=dummy
           
-          # Clean up Xvfb
-          pkill Xvfb
+          # Run the game with timeout
+          echo "Starting snake game in headless mode..."
+          if ! timeout 10s python snake.py; then
+              echo "Game exited with status $?"
+          fi
+          
+          # Clean up
+          pkill -f Xvfb
 
   deploy:
     name: Deploy to GCP
@@ -70,9 +76,6 @@ jobs:
             --platform managed \
             --region us-central1 \
             --allow-unauthenticated
-
-
-
 #----------------------------------------------------------------------------------------------------
 
 
