--- a/.github/workflows/python-ci-cd.yml
+++ b/.github/workflows/python-ci-cd.yml
@@ -81,27 +81,31 @@ jobs:
       - name: Set Up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Enable Required APIs
-        run: |
-          gcloud services enable cloudresourcemanager.googleapis.com
-          gcloud services enable run.googleapis.com
-          gcloud services enable cloudbuild.googleapis.com
-          gcloud services enable artifactregistry.googleapis.com
-          continue-on-error: true  # In case you already enabled them manually
+  #      - name: Enable APIs
+  # run: |
+  #   gcloud services enable cloudresourcemanager.googleapis.com
+  #   gcloud services enable run.googleapis.com
+  #   gcloud services enable cloudbuild.googleapis.com
+  #   gcloud services enable artifactregistry.googleapis.com
+  #   sleep 60  # Wait for APIs to activate
 
       - name: Deploy to Cloud Run
-        run: 
-          gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-          gcloud builds submit \
-          --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/snake-game \
-          --timeout=20m
+         run: |
+    # Set project
+    gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
     
-         gcloud run deploy snake-game \
-         --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/snake-game \
-         --platform managed \
-         --region us-central1 \
-         --allow-unauthenticated \
-         --timeout=10m
+    # Build and submit
+    gcloud builds submit \
+      --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/snake-game \
+      --timeout=20m
+    
+    # Deploy
+    gcloud run deploy snake-game \
+      --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/snake-game \
+      --platform managed \
+      --region us-central1 \
+      --allow-unauthenticated \
+      --timeout=10m
 #----------------------------------------------------------------------------------------------------
 
 
